# memU-mcp

./: .gitignore  README.md  manifest.json  pyproject.toml
data/resources/: memu_mcp_05422777-0e86-4ef8-8b72-1ace16683d93.txt  memu_mcp_df7a25fd-41e5-4589-9a4d-97ce369a08bb.txt  memu_mcp_f492d15a-010f-4b6c-997b-721bcfcf35ff.txt
src/memu_mcp/: __init__.py  auth.py  client.py  server.py
tests/: test_auth.py  test_client.py  test_server.py
