[project]
name = "memu-mcp"
version = "0.1.0"
description = "MCP server for memU - Expose MemoryService as MCP tools with cloud auth"
requires-python = ">=3.13"
dependencies = [
    "memu-py>=1.4.0",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memu_mcp"]

[project.scripts]
memu-mcp = "memu_mcp.server:main"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM",
    "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.mypy]
files = ["src", "tests"]
python_version = "3.13"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = false
disable_error_code = ["attr-defined", "call-arg"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dotenv.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
